# openai-error-archaeologist

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  gitLab-duo-agent-platform.md  improvement-measures.md  index.md  pyproject.toml
backend/: __init__.py
backend/app/: config.py  fixtures.py  main.py  repository.py  service.py
backend/app/domain/: __init__.py  models.py  verifier.py
backend/app/integrations/: openai.py
backend/scripts/: generate_samples.py
backend/tests/: conftest.py  test_api.py  test_fixtures.py  test_openai_adapter.py  test_service.py  test_verifier.py
docs/: h0-submission-draft-checklist.md
docs/briefing/: error-archaeologist-briefing.md
docs/development/: 2026-07-22-error-archaeologist-logo.md  demo-design.md  implementation-plan.md  submission-repository-design.md
docs/proposals/: 00-strategy.md  01-error-archaeologist.en.md  01-error-archaeologist.md  02-protege-effect-tutor.md  03-reading-prescription.md  04-homework-bridge.md  README-error-archaeologist.md
docs/res/: hackathon-proposal-evluation-criteria.md
docs/res/codex/: reference-revision-report.md  reference-search-plan.md
docs/res/web/: openai-devpost-com-rules.html  (+3 more)
docs/research/: evidence-base.md
docs/submission/: checklist.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts  workflow.test.ts  workflow.ts
pitch-video/: NARRATION.md  README.md  package-lock.json  package.json
pitch-video/src/: Root.tsx  Video.tsx  theme.ts
(+21 files in other folders)
